# QtLocationPolygonMergeDemo

./: CMakeLists.txt  Main.qml  README.md  fogview.cpp  fogview.h  main.cpp  projconvert.cpp  projconvert.h
vcpkg/installed/vcpkg/info/: curl_8.0.1_x64-windows.list  geos_3.11.1_x64-windows.list  geos_3.11.1_x86-windows.list  liblzma_5.4.1_x86-windows.list  proj_9.2.0_x64-windows.list  proj_9.2.0_x86-windows.list  sqlite3_3.40.1_x64-windows.list  sqlite3_3.40.1_x86-windows.list  tiff_4.5.0_x86-windows.list
vcpkg/installed/x64-windows/debug/lib/: geos.lib  geos_c.lib  libcurl-d.lib  proj_d.lib  sqlite3.lib  tiffd.lib  zlibd.lib
vcpkg/installed/x64-windows/lib/: geos.lib  geos_c.lib  proj.lib  sqlite3.lib
vcpkg/installed/x64-windows/lib/pkgconfig/: geos.pc  proj.pc
vcpkg/installed/x64-windows/share/curl/: CURLConfig.cmake  CURLConfigVersion.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x64-windows/share/geos/: geos-config-version.cmake  geos-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x64-windows/share/libjpeg-turbo/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x64-windows/share/liblzma/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x64-windows/share/nlohmann-json/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x64-windows/share/proj/: proj-config-version.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x64-windows/share/proj4/: proj4-config-version.cmake
vcpkg/installed/x64-windows/share/sqlite3/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x64-windows/share/tiff/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x86-windows/lib/: geos.lib  geos_c.lib  jpeg.lib  proj.lib  sqlite3.lib  tiff.lib
vcpkg/scripts/buildsystems/msbuild/: vcpkg.props
(+43 files in other folders)
